# Rusticulum

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md
.beads/: .migration-hint-ts  issues.jsonl
.reference/reticulum/: CLAUDE.md  Changelog.md  README.md  TESTING_PLAN.md  rusticulum-implementation-plan.md  tests-review-plan.md
.reference/reticulum/docker/: .dockerignore  Dockerfile  docker-compose.yml
.reference/reticulum/test_vectors/: buffer_transfers.json  channels.json  destination_hashes.json  extract_announces.py  extract_buffer_transfers.py  extract_channels.py  extract_destinations.py  extract_hashes.py  extract_hkdf.py  extract_interface_framing.py  extract_keypairs.py  extract_links.py  extract_multi_hop_routing.py  extract_packets.py  extract_packets_data.py  extract_path_expiration.py  extract_path_requests.py  extract_requests.py  (+12 more)
.test-vectors/: announces.json  hkdf.json  keypairs.json  links.json  packet_headers.json  path_expiration.json  path_requests.json  requests.json  retry_timers.json  token.json
crates/reticulum-core/: Cargo.toml
crates/reticulum-core/benches/: wire_bench.rs
crates/reticulum-core/src/: announce.rs  constants.rs  destination.rs  error.rs  identity.rs  lib.rs  types.rs
crates/reticulum-core/src/framing/: hdlc.rs  kiss.rs  mod.rs
crates/reticulum-core/src/packet/: context.rs  flags.rs  mod.rs  wire.rs
crates/reticulum-crypto/: Cargo.toml
crates/reticulum-crypto/benches/: crypto_bench.rs
crates/reticulum-crypto/src/: aes_cbc.rs  ed25519.rs  error.rs  hkdf.rs  hmac.rs  lib.rs  pkcs7.rs  sha.rs  token.rs  x25519.rs
crates/reticulum-interfaces/: Cargo.toml
crates/reticulum-interfaces/src/: error.rs  framing.rs  lib.rs  shutdown.rs  testing.rs  tower_service.rs  traits.rs  udp.rs
crates/reticulum-interfaces/src/auto/: discovery.rs  interface.rs  mod.rs  netif.rs  peer.rs
crates/reticulum-interfaces/src/local/: client.rs  mod.rs  server.rs
crates/reticulum-interfaces/src/tcp/: client.rs  framing.rs  mod.rs  server.rs
crates/reticulum-node/: Cargo.toml
crates/reticulum-node/src/: announce_builder.rs  announce_cache.rs  announce_processing.rs  auto_data_plan.rs  channel_manager.rs  channel_ops.rs  config.rs  error.rs  handler_rules.rs  identity_loading.rs  inbound_triage.rs  instance_detection.rs  instance_mode.rs  interface_enum.rs  interface_planning.rs  lib.rs  link_dispatch.rs  link_initiation.rs  link_lifecycle.rs  link_manager.rs  link_packets.rs  link_response.rs  logging.rs  main.rs  maintenance_ops.rs  node.rs  node_init.rs  packet_helpers.rs  packet_outcome.rs  path_request_handler.rs  post_transfer_drain.rs  resource_assembly.rs  resource_manager.rs  resource_ops.rs  routing.rs  storage.rs  storage_codec.rs  tower_service.rs  transmit_filter.rs  transport_guard.rs
crates/reticulum-node/tests/: binary_smoke.rs  deterministic_time_test.rs
crates/reticulum-protocol/: Cargo.toml
crates/reticulum-protocol/benches/: protocol_bench.rs
crates/reticulum-protocol/src/: error.rs  lib.rs
crates/reticulum-protocol/src/buffer/: constants.rs  mod.rs  stream_data.rs
crates/reticulum-protocol/src/channel/: constants.rs  envelope.rs  mod.rs  state.rs
crates/reticulum-protocol/src/link/: constants.rs  mod.rs  mtu.rs  state.rs  types.rs
crates/reticulum-protocol/src/request/: constants.rs  mod.rs  policy.rs  timeout.rs  types.rs
crates/reticulum-protocol/src/resource/: advertisement.rs  constants.rs  hashmap.rs  mod.rs  transfer.rs  window.rs
crates/reticulum-protocol/tests/: channel_state_tests.rs  channel_tests.rs  error_tests.rs  handshake_tests.rs  link_encryption_tests.rs  link_tests.rs
crates/reticulum-test-vectors/: Cargo.toml
crates/reticulum-test-vectors/src/: announces.rs  buffer_transfers.rs  channels.rs  destination_hashes.rs  hashes.rs  helpers.rs  hkdf.rs  interface_framing.rs  keypairs.rs  lib.rs  links.rs  multi_hop_routing.rs  packet_headers.rs  packets_data.rs  path_expiration.rs  path_requests.rs  requests.rs  resource_transfers.rs  resources.rs  retry_timers.rs  token.rs  window_adaptation.rs
crates/reticulum-transport/: Cargo.toml
crates/reticulum-transport/benches/: transport_bench.rs
crates/reticulum-transport/src/: dedup.rs  error.rs  ifac.rs  lib.rs  path_decision.rs
crates/reticulum-transport/src/announce/: constants.rs  mod.rs  propagation.rs
crates/reticulum-transport/src/path/: constants.rs  mod.rs  path_request.rs  table.rs  types.rs
crates/reticulum-transport/src/router/: constants.rs  dispatch.rs  mod.rs  tables.rs  types.rs
docker/: Dockerfile.python  Dockerfile.rust  docker-compose.announce-test.yml  docker-compose.compat-edge-test.yml  docker-compose.compat-stress-test.yml  docker-compose.fuzz-test.yml  docker-compose.ifac-reject-test.yml  docker-compose.ifac-test.yml  docker-compose.keepalive-test.yml  docker-compose.large-resource-test.yml  docker-compose.link-test.yml  docker-compose.multihop-channel-test.yml  docker-compose.multihop-data-test.yml  docker-compose.multihop-test.yml  docker-compose.path-request-test.yml  docker-compose.resource-test.yml  docker-compose.rust-relay-test.yml  docker-compose.storage-test.yml  docker-compose.test-channel.yml  docker-compose.vector-check-test.yml  docker-compose.yml
docker/scripts/: python-announce-test.py  python-channel-test.py  python-compat-edge-test.py  python-compat-stress-test.py  python-fuzz-test.py  python-ifac-reject-test.py  python-ifac-test.py  python-keepalive-test.py  python-large-resource-test.py  python-link-test.py  python-multihop-channel-test.py  python-multihop-test.py  python-path-request-test.py  python-resource-test.py  python-storage-test.py  python-vector-check.py  test-announce.sh  test-channel.sh  test-compat-all.sh  test-compat-edge.sh  test-compat-stress.sh  test-fuzz.sh  test-helpers.sh  test-ifac-reject.sh  test-ifac.sh  test-keepalive.sh  test-large-resource.sh  test-link.sh  test-multihop-channel.sh  test-multihop-data.sh  test-multihop.sh  test-path-request.sh  test-resource.sh  test-runner.sh  test-rust-relay.sh  test-storage-persistence.sh  test-vector-check.sh
(+31 files in other folders)
