[package]
name = "reticulum-crypto"
version = "0.1.0"
description = "Cryptographic primitives for the Reticulum network stack"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = ["std"]
std = ["tracing"]
tracing = ["dep:tracing"]

[dependencies]
sha2 = { workspace = true }
hmac = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
reticulum-test-vectors = { workspace = true, features = ["helpers"] }
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "crypto_bench"
harness = false
