[package]
name = "reticulum-interfaces"
version = "0.1.0"
description = "Network interfaces for the Reticulum network stack"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reticulum-core = { workspace = true, features = ["std"] }
reticulum-crypto = { workspace = true, features = ["std"] }
reticulum-transport = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
socket2 = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
