[package]
name = "reticulum-node"
version = "0.1.0"
description = "Node orchestration for the Reticulum network stack"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reticulum-crypto = { workspace = true, features = ["std"] }
reticulum-core = { workspace = true, features = ["std"] }
reticulum-protocol = { workspace = true }
reticulum-transport = { workspace = true }
reticulum-interfaces = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
