[package]
name = "reticulum-node"
version = "0.1.0"
description = "Node orchestration for the Reticulum network stack"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "reticulum-node"
path = "src/main.rs"

[[bin]]
name = "fuzz-gen"
path = "src/bin/fuzz-gen.rs"

[[bin]]
name = "vector-check"
path = "src/bin/vector-check.rs"

[features]
default = []
tower = ["dep:tower", "reticulum-interfaces/tower"]

[dependencies]
reticulum-crypto = { workspace = true, features = ["std"] }
reticulum-core = { workspace = true, features = ["std"] }
reticulum-protocol = { workspace = true }
reticulum-transport = { workspace = true }
reticulum-interfaces = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
hex = { workspace = true }
rmpv = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true, optional = true }
reticulum-test-vectors = { path = "../reticulum-test-vectors" }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
