[package]
name = "reticulum-test-vectors"
version = "0.1.0"
description = "Test vector loading infrastructure for Rusticulum"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
helpers = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
