[package]
name = "reticulum-transport"
version = "0.1.0"
description = "Routing and transport layer for the Reticulum network stack"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reticulum-protocol = { workspace = true }
reticulum-core = { workspace = true, features = ["std"] }
reticulum-crypto = { workspace = true, features = ["std"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
reticulum-test-vectors = { workspace = true }
proptest = { workspace = true }
